--- a/faq.html
+++ b/faq.html
@@ -337,7 +337,7 @@
     <div class="container">
         <!-- Page Header -->
         <div class="page-header">
-            <h2>❓ الأسئلة الشائعة</h2>
+            <h2>الأسئلة الشائعة</h2>
             <p>إجابات على جميع أسئلتك حول تجميعة</p>
         </div>
         
@@ -554,7 +554,7 @@
                 </div>
                 <div class="answer">
                     • Email: customer.service@kemetops.cloud<br>
-                    • Phone: +966 59 342 6181<br>
+                    • Phone: +966593426181<br>
                     • Hours: Sunday-Thursday, 9 AM - 6 PM (Riyadh Time)
                 </div>
             </div>
@@ -617,3 +617,4 @@
     </script>
 </body>
 </html>
+
