privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -394,7 +394,7 @@
                 <p>للأسئلة حول الخصوصية:</p>
                 <p>
                     📧 البريد الإلكتروني: <a href="mailto:customer.service@kemetops.cloud">customer.service@kemetops.cloud</a><br>
-                    📱 واتساب: <a href="https://wa.me/966593426181">+966 59 342 6181</a>
+                    📱 واتساب: <a href="https://wa.me/966593426181">+966593426181</a>
                 </p>
             </div>
         </div>
@@ -535,3 +535,4 @@
     </script>
 </body>
 </html>
+
